fixing column gap in favorites grid

--- a/styles/favorites/favorites.sass
+++ b/styles/favorites/favorites.sass
@@ -107,4 +107,4 @@
         z-index: 1000
 
     .main__hero__search-results__search-grid
-        column-gap: 60px
+        column-gap: 100px
